...
    <string name="item_edit_delete_dialog_negative_button">キャンセル</string>
    <string name="item_edit_empty_message">アイテムがありません</string>
    <string name="item_edit_add_item_suggestion">アイテムを追加しましょう</string>


    <string name="category_edit_title">カテゴリー</string>
    <string name="category_edit_add_dialog_title">カテゴリー追加</string>
    <string name="category_edit_edit_dialog_title">カテゴリー名変更</string>
    <string name="category_edit_delete_dialog_title">カテゴリの削除</string>
    <string name="category_edit_delete_dialog_message">%1$sを削除しますか？\nこのカテゴリに設定されたアイテムのカテゴリは未設定になります。</string>
    <string name="category_edit_delete_dialog_positive_button">削除</string>
    <string name="category_edit_delete_dialog_negative_button">キャンセル</string>
    <string name="category_edit_empty_message">カテゴリーがありません</string>
...
